Bug 1806 -  Font and backgound color make word hard to read
On-behalf-of: Eugene Matveyev <evgeniy.m@monterosa.co.uk>
Reviewed-on: http://review.northscale.com/1908
Tested-by: Aliaksey Kandratsenka <alkondratenko@gmail.com>

--- a/deps/menelaus/priv/public/css/screen.css
+++ b/deps/menelaus/priv/public/css/screen.css
@@ -454,7 +454,7 @@ html {height:100%;}
 .spinner { vertical-align: middle; text-align: center; background:url(../images/spinner/spinner_3.gif) center 43% no-repeat;}
 
 a.selected { text-decoration: underline; }
-.header_2 a.selected {display:inline-block;padding:4px 5px 5px 6px;line-height:1;background:none #c3c3c3 !important;}
+.header_2 a.selected {display:inline-block;padding:4px 5px 5px 6px;line-height:1.2;background:none #c3c3c3 !important;*vertical-align:middle;}
 #analytics .header_2 {padding:2px 10px 2px 11px;}
 
 .alerts_list h2 { border-bottom: 1px dashed black; }
